@@ -89,9 +89,6 @@ int ret = (int)method.invoke(100); // "ret" should be 100
 
 You can bind native method to `MemorySegment` of ffmasm code dynamically.
 
-> [!IMPORTANT]
-> JNI binding ( `NativeRegister` class) depends on [JEP 459](https://openjdk.org/jeps/459) which is preview feature in JDK 22. So you need to add `--enable-preview` when you compile / run your application.
-
 You have to construct `MemorySegment` of the machine code with `AMD64AsmBuilder`, and you have to get it from `getMemorySegment()`. Then you can bind it via `NativeRegister`.
 
 Following example shows native method `test` is binded to the code made by ffmasm. Note that 1st argument in Java is located at arg3 in native function because this is native function (1st arg is `JNIEnv*`, and 2nd arg is `jobject` or `jclass`).
